--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
     <h1>哇，标题欸</h1>
     <p>哇，内容欸</p>
-    <p style="color: green;">恭喜你成功访问了这个啥也没有的网站，如果你愿意的话，你可以见证这个网站的逐步发展喵~</p>
-    <button onclick="click_event()">哇一个按钮</button>
+    <span style="color: green;">恭喜你成功访问了这个啥也没有的网站，如果你愿意的话，你可以见证这个网站的逐步发展</span>
+    <span style="color: green; font-size: 50px;">喵</span>
+    <hr>
+    <button onclick="click_event()">哇一个按钮!</button>
 
     <script>
         function click_event() {
