--- a/alert/index.html
+++ b/alert/index.html
@@ -25,8 +25,17 @@
       </style>
 </head>
 <body>
-    <video autoplay="autoplay" loop="loop">
+    <video autoplay="autoplay" loop="loop" id="myVideo" controls>
         <source src="./不惧困难,顽强乐观。贵在坚持,顺其自然!加油!奥利给!哈哈哈哈哈哈.1.mp4" type="video/mp4"></source>
     </video>
+    <script>
+        window.onload = function() {
+          var video = document.getElementById('myVideo');
+          video.play().catch(error => {
+            console.error('Video playback failed:', error);
+          });
+        };
+    </script>
+</body>
 </body>
 </html>
