--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="home">
         <div class="profile">
             <a href="https://abitginger.top/blog/about/" target="_blank">
-                <img src="/img/1.10.png" alt="Profile" class="profile-img">
+                <img src="/img/1.10.jpg" alt="Profile" class="profile-img">
             </a>
         </div>
 
