--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <section id="home">
+    <section id="content">
         <div class="profile">
             <a href="https://abitginger.top/blog/about/" target="_blank">
                 <img src="/img/1.10.webp" alt="Profile" class="profile-img">
