--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="button-container">
-            <a href="https://abitginger.top/blog" class="button" target="_blank">姜的博客</a><br>
+            <!-- <a href="https://abitginger.top/blog" class="button" target="_blank">姜的博客</a><br> -->
             <a href="https://abitginger.top/mcdoc" class="button" target="_blank">姜的MC文档</a>
             <!-- 更多按钮 -->
         </div>
