no github no blog

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="https://abitginger.top/blog/about/" target="_blank">关于姜</a></li></url> 
-                <li><a href="https://github.com/ABitGinger" target="_blank">Github</a></li></url> 
+                <!-- <li><a href="https://abitginger.top/blog/about/" target="_blank">关于姜</a></li></url>  -->
+                <!-- <li><a href="https://github.com/ABitGinger" target="_blank">Github</a></li></url>  -->
                 <li><a href="https://space.bilibili.com/262940581" target="_blank">Bilibili</a></li></url> 
                 <li><a id="email-text" class="email-text">发送邮件</a></li>
             </ul>
@@ -22,7 +22,8 @@
 
     <section id="content">
         <div class="profile">
-            <a href="https://abitginger.top/blog/about/" target="_blank">
+            <a href="#" target="_blank">
+                <!-- <a href="https://abitginger.top/blog/about/" target="_blank"> -->
                 <img src="/img/1.10.webp" alt="Profile" class="profile-img">
             </a>
         </div>
