--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav>
             <ul>
-                <!-- <li><a href="https://abitginger.top/blog/about/" target="_blank">关于姜</a></li></url>  -->
-                <!-- <li><a href="https://github.com/ABitGinger" target="_blank">Github</a></li></url>  -->
+                <li><a href="https://abitginger.top/blog/about/" target="_blank">关于姜</a></li></url> 
+                <li><a href="https://github.com/ABitGinger" target="_blank">Github</a></li></url> 
                 <li><a href="https://space.bilibili.com/262940581" target="_blank">Bilibili</a></li></url> 
                 <li><a id="email-text" class="email-text">发送邮件</a></li>
             </ul>
@@ -23,7 +23,7 @@
     <section id="content">
         <div class="profile">
             <a href="#" target="_blank">
-                <!-- <a href="https://abitginger.top/blog/about/" target="_blank"> -->
+                <a href="https://abitginger.top/blog/about/" target="_blank">
                 <img src="/img/1.10.webp" alt="Profile" class="profile-img">
             </a>
         </div>
@@ -33,8 +33,8 @@
         </div>
 
         <div class="button-container">
-            <!-- <a href="https://abitginger.top/blog" class="button" target="_blank">姜的博客</a><br> -->
-            <!-- <a href="https://abitginger.top/mcdoc" class="button" target="_blank">姜的MC文档</a> -->
+            <a href="https://abitginger.top/blog" class="button" target="_blank">姜的博客</a><br>
+            <a href="https://abitginger.top/mcdoc" class="button" target="_blank">姜的MC文档</a>
             <!-- 更多按钮 -->
         </div>
     </section>
@@ -43,6 +43,7 @@
         <p>版权所有 &copy; 姜 2024</p>
         <p>页面背景建筑师：realYosh 于姜的生存服作</p>
         <a href="https://beian.miit.gov.cn" target="_blank">吉ICP备2024023158号</a>
+        <p><img src="https://beian.mps.gov.cn/web/assets/logo01.6189a29f.png" width="20"/> <a href="https://beian.mps.gov.cn/#/query/webSearch?code=21029602000999" rel="noreferrer" target="_blank">辽公网安备21029602000999号</a></p>
     </footer>
 </body>
 </html>
