--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>姜的网上小窝</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/script.js"></script>
+    <link rel="stylesheet" href="/css/style.css?v=1.0.0">
+    <script src="/js/script.js?v=1.0.0"></script>
 </head>
 <body>
     <header>
@@ -40,7 +39,7 @@
     </section>
 
     <footer>
-        <p>版权所有 &copy; 姜 2024</p>
+        <p>版权所有 &copy; 壹位姜 2024</p>
         <p>页面背景建筑师：realYosh 于姜的生存服作</p>
         <a href="https://beian.miit.gov.cn" target="_blank">吉ICP备2024023158号</a>
         <p><img src="https://beian.mps.gov.cn/web/assets/logo01.6189a29f.png" width="20"/> <a href="https://beian.mps.gov.cn/#/query/webSearch?code=21029602000999" rel="noreferrer" target="_blank">辽公网安备21029602000999号</a></p>
