--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>版权所有 &copy; 壹位姜 2024</p>
         <p>页面背景建筑师：realYosh 于姜的生存服作</p>
         <a href="https://beian.miit.gov.cn" target="_blank">吉ICP备2024023158号</a>
-        <p><img src="https://beian.mps.gov.cn/web/assets/logo01.6189a29f.png" width="20"/> <a href="https://beian.mps.gov.cn/#/query/webSearch?code=21029602000999" rel="noreferrer" target="_blank">辽公网安备21029602000999号</a></p>
+        <p><img src="https://beian.mps.gov.cn/img/logo01.dd7ff50e.png" width="20"/> <a href="https://beian.mps.gov.cn/#/query/webSearch?code=21029602000999" rel="noreferrer" target="_blank">辽公网安备21029602000999号</a></p>
     </footer>
 </body>
 </html>
