--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>姜的网上小窝</title>
-    <link rel="stylesheet" href="/css/style.css?v=1.0.0">
-    <script src="/js/script.js?v=1.0.0"></script>
+    <link rel="stylesheet" href="/css/style.css?v=1.0.1">
+    <script src="/js/script.js?v=1.0.1"></script>
 </head>
 <body>
     <header>
@@ -13,8 +13,9 @@
             <ul>
                 <li><a href="https://abitginger.top/blog/about/" target="_blank">关于姜</a></li></url> 
                 <li><a href="https://github.com/ABitGinger" target="_blank">Github</a></li></url> 
-                <li><a href="https://space.bilibili.com/262940581" target="_blank">Bilibili</a></li></url> 
-                <li><a id="email-text" class="email-text">发送邮件</a></li>
+                <!-- <li><a href="https://space.bilibili.com/262940581" target="_blank">Bilibili</a></li></url>  -->
+                <!-- <li><a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=Mzk0MTc5NTQ1OQ==" target="_blank">公众号</a></li></url>  -->
+                <li><a id="email-text" class="email-text">📧发送邮件</a></li>
             </ul>
         </nav>
     </header>
@@ -32,8 +33,9 @@
         </div>
 
         <div class="button-container">
-            <a href="https://abitginger.top/blog" class="button" target="_blank">姜的博客</a><br>
-            <a href="https://abitginger.top/mcdoc" class="button" target="_blank">姜的MC文档</a>
+            <a href="https://abitginger.top/blog" class="button" target="_blank">博客</a><br>
+            <a href="https://abitginger.top/mcdoc" class="button" target="_blank">MC文档</a>
+            <a href="https://salaa-hulaa.github.io/" class="button" target="_blank">洒洒水啦-团队主页</a>
             <!-- 更多按钮 -->
         </div>
     </section>
@@ -42,7 +44,8 @@
         <p>版权所有 &copy; 壹位姜 2024</p>
         <p>页面背景建筑师：realYosh 于姜的生存服作</p>
         <a href="https://beian.miit.gov.cn" target="_blank">吉ICP备2024023158号</a>
-        <p><img src="https://beian.mps.gov.cn/img/logo01.dd7ff50e.png" width="20"/> <a href="https://beian.mps.gov.cn/#/query/webSearch?code=21029602000999" rel="noreferrer" target="_blank">辽公网安备21029602000999号</a></p>
+        <br>
+        <img src="https://beian.mps.gov.cn/img/logo01.dd7ff50e.png" width="20"/> <a href="https://beian.mps.gov.cn/#/query/webSearch?code=21029602000999" rel="noreferrer" target="_blank">辽公网安备21029602000999号</a>
     </footer>
 </body>
 </html>
