--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
 
         <div class="button-container">
-            <a href="https://abitginger.top/blog" class="button" target="_blank">博客</a><br>
-            <a href="https://abitginger.top/mcdoc" class="button" target="_blank">MC文档</a>
+            <a href="https://abitginger.top/mcdoc" class="button" target="_blank">Minecraft 文档</a>
             <a href="https://salaa-hulaa.github.io/" class="button" target="_blank">洒洒水啦-团队主页</a>
+            <a href="https://abitginger.top/blog" class="button" target="_blank">博客</a><br>
             <!-- 更多按钮 -->
         </div>
     </section>
