--- a/6/index.html
+++ b/6/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="emoji-container">👊</div>
-    <div class="hint-text">按住拳头不放</div>
+    <div class="hint-text">按住拳头不放😊</div>
 
     <script>
         const emojiContainer = document.querySelector('.emoji-container');
