年份自动更新

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <footer>
-        <p>版权所有 &copy; 壹位姜 2024</p>
+        <p>版权所有 &copy; 壹位姜 <script>document.write(new Date().getFullYear())</script></p>
         <p>页面背景建筑师：realYosh 于姜的生存服作</p>
         <a href="https://beian.miit.gov.cn" target="_blank">吉ICP备2024023158号</a>
         <br>
